[tool.poetry]
name = "fastapi-intro"
version = "0.1.0"
description = ""
authors = ["Dylamn <dylan.vallee@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.94.0"}
pydantic = {extras = ["email"], version = "^1.10.6"}
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
